Added user role assignment endpoint
