# src/server/handlers/user-role-assignment.ts
@@ -31,32 +31,59 @@
 // import btoa from 'btoa'
 import { StateResponseToolkit } from '~/server/plugins/state'
 import { Request, ResponseObject } from '@hapi/hapi'
-import { PermissionExclusionsValidator, UserRole, RolePermissions, PermissionExclusions } from '../../validation/permission-exclusions'
+import { PermissionExclusionsValidator, UserRole } from '../../validation/permission-exclusions'
 import { ValidationError } from '../../validation/validation-error'
 import Config from '../../shared/config'
+import * as keto from '@ory/keto-client'
 
-interface ValidationErrorResponse {
-  isValid: boolean;
+interface AssignmentErrorResponse {
+  isCreated: boolean;
   errors: string[];
 }
+
+const oryKetoReadApi: keto.ReadApi = new keto.ReadApi(
+  undefined,
+  Config.ORY_KETO_READ_SERVICE_URL
+)
+
+const oryKetoWriteApi: keto.WriteApi = new keto.WriteApi(
+  undefined,
+  Config.ORY_KETO_WRITE_SERVICE_URL
+)
 
 const permissionExclusionsValidator = new PermissionExclusionsValidator(Config)
 
 // eslint-disable-next-line max-len
-const ValidateUserRole = async (_context: unknown, _request: Request, h: StateResponseToolkit): Promise<ResponseObject> => {
+const AssignUserRole = async (_context: unknown, _request: Request, h: StateResponseToolkit): Promise<ResponseObject> => {
   try {
     const response = {}
     const userRole : UserRole = <UserRole>_request.payload
     try {
       await permissionExclusionsValidator.validateUserRole(userRole)
+
+      // Get current role assignments
+      const responseGetCurrentRoles = await oryKetoReadApi.getRelationTuples(
+        'role',
+        undefined,
+        'member',
+        userRole.username
+      )
+      const currentRoles = responseGetCurrentRoles.data?.relation_tuples?.map(({ object }) => object) || []
+      // Get the difference
+      const patchDeltaArr = _generateUserRolesPatchDeltaArray(currentRoles, userRole.roles, userRole.username)
+      // Apply patch
+      await oryKetoWriteApi.patchRelationTuples(patchDeltaArr)
+      h.response().code(200)
     } catch (err) {
       if (err instanceof ValidationError) {
-        const errorResponse: ValidationErrorResponse = {
-          isValid: false,
+        const errorResponse: AssignmentErrorResponse = {
+          isCreated: false,
           errors: err.validationErrors
         }
+        console.log(errorResponse)
         return h.response(errorResponse).code(406)
       } else {
+        console.log(err)
         throw err
       }
     }
@@ -67,34 +94,39 @@ const ValidateUserRole = async (_context: unknown, _request: Request, h: StateRe
   }
 }
 
-// eslint-disable-next-line max-len
-const ValidateRolePermissions = async (_context: unknown, _request: Request, h: StateResponseToolkit): Promise<ResponseObject> => {
-  try {
-    const response = {}
-    const requestObject: any = _request.payload
-    const rolePermissions : RolePermissions[] = requestObject?.rolePermissions
-    const permissionExclusions : PermissionExclusions[] = requestObject?.permissionExclusions
-    try {
-      await permissionExclusionsValidator.validateRolePermissions(rolePermissions, permissionExclusions)
-    } catch (err) {
-      if (err instanceof ValidationError) {
-        const errorResponse: ValidationErrorResponse = {
-          isValid: false,
-          errors: err.validationErrors
-        }
-        return h.response(errorResponse).code(406)
-      } else {
-        throw err
+const _generateUserRolesPatchDeltaArray = (
+  currentRoles: string[], newRoles: string[], username: string
+): keto.PatchDelta[] => {
+  // Calculate the roles to be deleted
+  const deleteRoles = currentRoles?.filter(item => !newRoles.includes(item))
+  // Calculate the permissions to be added
+  const addRoles = newRoles?.filter(item => !currentRoles.includes(item))
+  let patchDeltaArray: keto.PatchDelta[] = []
+  patchDeltaArray = patchDeltaArray.concat(addRoles.map(role => {
+    return {
+      action: 'insert',
+      relation_tuple: {
+        namespace: 'role',
+        object: role,
+        relation: 'member',
+        subject: username
       }
     }
-    return h.response(response).code(200)
-  } catch (e) {
-    h.getLogger().error(e)
-    return h.response().code(500)
-  }
+  }))
+  patchDeltaArray = patchDeltaArray.concat(deleteRoles.map(role => {
+    return {
+      action: 'delete',
+      relation_tuple: {
+        namespace: 'role',
+        object: role,
+        relation: 'member',
+        subject: username
+      }
+    }
+  }))
+  return patchDeltaArray
 }
 
 export default {
-  ValidateUserRole,
-  ValidateRolePermissions
+  AssignUserRole
 }
